# helhug-book-club

./: .gitignore  README.md  flake.nix  sockets-and-pipes.cabal
exec/: Main.hs
src/SNP/: Chapter1.hs  Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter8.hs  Chapter9.hs
