cabal-version: 1.12
name:           sockets-and-pipes
version:        0.0.0
build-type:     Simple
library
  exposed-modules:
      SNP.Chapter1
      SNP.Chapter2
  other-modules:
      Paths_sockets_and_pipes
  hs-source-dirs:
      src
  ghc-options: -Wall -O2 -fspecialise-aggressively
  build-depends:
      base
    , lens
  default-language: Haskell2010

executable sockets-and-pipes
  main-is: Main.hs
  other-modules:
      Paths_sockets_and_pipes
  hs-source-dirs:
      exec
  ghc-options: -Wall -O2 -fspecialise-aggressively
  build-depends:
      base
    , sockets-and-pipes
    , warp
  default-language: Haskell2010
