cabal-version: 1.12
name:           sockets-and-pipes
version:        0.0.0
build-type:     Simple
library
  exposed-modules:
      SNP.Chapter1
      SNP.Chapter2
      SNP.Chapter3
      SNP.Chapter4
      SNP.Chapter5
      SNP.Chapter6
      SNP.Chapter8
      SNP.Chapter9
  other-modules:
      Paths_sockets_and_pipes
  hs-source-dirs:
      src
  ghc-options: -Wall -O2 -fspecialise-aggressively
  build-depends:
      base
    , blaze-html
    , bytestring
    , directory
    , filepath
    , network
    , network-simple
    , resourcet
    , safe-exceptions
    , text
    , time
    , ascii
    , aeson
  default-language: Haskell2010

executable sockets-and-pipes
  main-is: Main.hs
  other-modules:
      Paths_sockets_and_pipes
  hs-source-dirs:
      exec
  ghc-options: -Wall -O2 -fspecialise-aggressively
  build-depends:
      base
    , warp
  default-language: Haskell2010
